public/resources/scss/stats.scss
/* ... */
.piece {
  display: inline-block;
  position: relative;
  width: 75px;
  height: 75px;
  vertical-align: top;
  margin-right: 8px;
  margin-top: 12px;
  box-sizing: border-box;
  border-radius: 5px;
  user-select: none;
  cursor: context-menu;
  transition: box-shadow 0.2s ease-in-out;
  box-shadow: rgba(var(--text-rgb), 0) 0 0 0 0px inset;
  content-visibility: auto;

  &.sticky-stats,
  &:focus {
    box-shadow: rgba(var(--text-rgb), 0.9) 0 0 0 4px inset;
  }
}

.rich-item {
  @media (hover: hover) {
    &::after {
      content: "";
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      z-index: 20;
      transition: background-color 0.2s;
      border-radius: 5px;
      pointer-events: none;
    }
    &.sticky-stats::after,
    &:hover::after {
      background-color: rgba(255, 255, 255, 0.2);
    }
  }

  .item-count {
    position: absolute;
    z-index: 16;
    bottom: calc(var(--inventory-width) * 0.0025);
    right: calc(var(--inventory-width) * 0.0025);
    font-size: calc(var(--inventory-width) * 0.03333);
    color: white;
    text-shadow: 0.1em 0.1em 0.1em black;
    font-weight: 600;
  }
}

.pieces {
  margin-top: -12px;
}

.stat-weapons {
  margin-bottom: -10px;
}

.stat-weapons .piece,
.stat-fishing .piece {
  margin-bottom: 50px;
  content-visibility: visible;
}

.piece .select-weapon,
.piece .select-rod {
  top: calc(100% + 15px);
  position: absolute;
  left: 50%;
  margin-left: -11px;
  width: 22px;
  height: 22px;
  border: 3px solid var(--text-hex);
  border-radius: 3px;
  box-sizing: border-box;
  transition: background-color 0.2s;

  &:hover {
    background-color: rgba(var(--text-rgb), 0.1);
  }
}

.piece-selected .select-weapon,
.piece-selected .select-rod {
  background-color: var(--text-hex) !important;
}

@keyframes flash {
  from {
    background-color: rgb(255, 255, 255, 1);
  }

  to {
    background-color: rgba(255, 255, 255, 0);
  }
}

.updated {
  animation-name: flash;
  animation-duration: 0.5s;
  animation-timing-function: ease-out;
  border-radius: 2px;
}

.piece-shine {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  transform: translateY(-100%);
  background: linear-gradient(
    to top,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.5) 50%,
    rgba(128, 186, 232, 0) 99%,
    rgba(125, 185, 232, 0) 100%
  );
  z-index: 10;
  animation: shine 4s infinite;
}

@keyframes shine {
  0% {
    transform: translateY(120%);
  }

  33% {
    transform: translateY(-120%);
  }

  100% {
    transform: translateY(-120%);
  }
}

.item-icon.is-enchanted {
  filter: url(#enchanted-glint);
  #stats_content &.stats-piece-icon,
  &.piece-icon {
    filter: url(#enchanted-glint) drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));
  }
}

.piece-icon {
  position: absolute;
  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));
  z-index: 15;
  pointer-events: none;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.5);
  transform-origin: center center;
  image-rendering: crisp-edges;
  image-rendering: pixelated;
}

.custom-icon {
  background-size: 128px auto;
  background-repeat: no-repeat;
  background-position: center center !important;
  mask-size: 128px 128px;
  mask-repeat: no-repeat;
  mask-position: center center;
  -webkit-mask-size: 128px 128px;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center center;
}

.piece-supreme-bg,
.style-scrollbar .piece-supreme-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§4);
}
.piece-supreme-bg + .item-lore {
  scrollbar-color: var(--§4) transparent;
}
.piece-supreme-fg {
  color: var(--§4) !important;
}

.piece-special-bg,
.style-scrollbar .piece-special-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§c);
}
.piece-special-bg + .item-lore {
  scrollbar-color: var(--§c) transparent;
}
.piece-special-fg {
  color: var(--§c) !important;
}

.piece-divine-bg,
.style-scrollbar .piece-divine-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§b);
}
.piece-divine-bg + .item-lore {
  scrollbar-color: var(--§b) transparent;
}
.piece-divine-fg {
  color: var(--§b) !important;
}

.piece-mythic-bg,
.style-scrollbar .piece-mythic-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§d);
}
.piece-mythic-bg + .item-lore {
  scrollbar-color: var(--§d) transparent;
}
.piece-mythic-fg {
  color: var(--§d) !important;
}

.piece-legendary-bg,
.style-scrollbar .piece-legendary-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§6);
}
.piece-legendary-bg + .item-lore {
  scrollbar-color: var(--§6) transparent;
}
.piece-legendary-fg {
  color: var(--§6) !important;
}

.piece-epic-bg,
.style-scrollbar .piece-epic-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§5);
}
.piece-epic-bg + .item-lore {
  scrollbar-color: var(--§5) transparent;
}
.piece-epic-fg {
  color: var(--§5) !important;
}

.piece-rare-bg,
.style-scrollbar .piece-rare-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§9);
}
.piece-rare-bg + .item-lore {
  scrollbar-color: var(--§9) transparent;
}
.piece-rare-fg {
  color: var(--§9) !important;
}

.piece-uncommon-bg,
.style-scrollbar .piece-uncommon-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§a);
}
.piece-uncommon-bg + .item-lore {
  scrollbar-color: var(--§a) transparent;
}
.piece-uncommon-fg {
  color: var(--§a) !important;
}

.piece-common-bg,
.style-scrollbar .piece-common-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§f);
}
.piece-common-bg + .item-lore {
  scrollbar-color: var(--§f) transparent;
}
.piece-common-fg {
  color: var(--§f) !important;
}
/* ... */

